--- a/site/group_vars/all.yml
+++ b/site/group_vars/all.yml
@@ -61,7 +61,8 @@ rabbitmq_host: "rabbitmq.service.{{consul_datacenter}}.consul"
 
 server__sensu: "sensu.service.{{consul_datacenter}}.consul"
 
-sensu_plugins_directory: /opt/sensu/embedded/bin/ruby
+sensu_plugins_directory: /etc/sensu/plugins
+sensu_ruby_path: /opt/sensu/embedded/bin/ruby
 
 sensu_rabbitmq_host: "{{ rabbitmq_host }}"
 sensu_rabbitmq_port: 5672
