--- a/site/roles/barman/defaults/main.yml
+++ b/site/roles/barman/defaults/main.yml
@@ -1,9 +1,9 @@
 ---
 # Key for use by master to send archive segments
-barman_archive_pub_key: # required
+barman_archive_pub_key: "{{ lookup('file', 'barman_rsa_pub') }}"  # required
 # Writes as ~{{barman_user}}/.ssh/id_rsa
 # This key is used by Barman for SSH access onto the master
-barman_ssh_key_file: #required
+barman_ssh_key_file: barman_rsa #required
 
 barman_home: /var/barman
 barman_log_dir: /var/log/barman
