barmand and postgre stuff

--- a/site/group_vars/all.yml
+++ b/site/group_vars/all.yml
@@ -1,14 +1,14 @@
 #general servers ip
 filebeat_logstash_host: 192.168.100.102
 consul_server: 192.168.100.104
-
-
-
+barman_server: 192.168.100.109
 dns_server: 10.10.10.11
+sensu::server::ip: 192.168.100.106
+consul_master: "{{ consul_server }}"
 
 resolv_conf_nameservers:
       - 127.0.0.1
-      - 10.10.10.11
+      - "{{ dns_server }}"
       - 8.8.8.8
 resolv_conf_search_domains:
       - paosin.local
@@ -21,7 +21,7 @@ java_packages:
 consul_clients_group: all
 consul_bind_interface: eth1
 consul_enable_dnsmasq: false
-consul_master: 192.168.100.104
+
 consul_servers_group: "consul_servers"
 consul_version: 0.7.2
 
@@ -39,12 +39,12 @@ consul_join_at_start: true
 consul_log_level: "DEBUG"
 consul_dns_config: false
 consul_recursors: 
- - 10.10.10.11
+ - "{{ dns_server }}"
 
 consul_group_name: sensu_servers
 consul_node_role: client
 
-sensu::server::ip: 192.168.100.106
+
 sensu::server: "sensu.service.{{consul_datacenter}}.consul"
 rabbitmq::host: "rabbitmq.service.{{consul_datacenter}}.consul"
 
