--- a/site/site.yml
+++ b/site/site.yml
@@ -6,4 +6,5 @@
 - include: server_roles/sensu_servers.yml
 - include: server_roles/messaging_servers.yml
 - include: server_roles/barman_servers.yml
+- include: server_roles/postgres_servers.yml
 #- include: server_roles/db_servers.yml
