--- a/site/group_vars/barman_servers.yml
+++ b/site/group_vars/barman_servers.yml
@@ -1,7 +1,9 @@
 barman_upstreams:
   - name: "db1"
     hostname: "{{ postgresql_server1 }}"
-        
+
+firewalld_allow_ports:
+  - { port: 5432 , zone: public , state: enabled }       
         
 consul_services:
   - service:
