--- a/site/group_vars/messaging_servers.yml
+++ b/site/group_vars/messaging_servers.yml
@@ -1,14 +1,6 @@
-#sensu_master: true
-#sensu_include_dashboard: true
-
-#uchiwa_dc_name: local
-#sensu_deploy_redis: true
-#redis_host: '127.0.0.1'
-#redis_server: true
-
+---
 
 rabbitmq_enabled: yes
-
 rabbitmq_plugins:                       # Ensure the plugins is installed
   - rabbitmq_management
 
@@ -35,7 +27,11 @@ rabbitmq_users:                         # Ensure the users added
     write_priv: .*
     tags: administrator
 
-
+firewalld_allow_ports:
+  - { port: 5672 , zone: public , state: enabled }
+  - { port: 61616 , zone: public , state: enabled }
+  - { port: 61613 , zone: public , state: enabled }  
+  
 rabbitmq_vhosts: ['/','/sensu','/logstash']                     # Ensure the vhosts are exists
 
     
