--- a/site/roles/elasticsearch/defaults/main.yml
+++ b/site/roles/elasticsearch/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 es_major_version: "2.x"
 es_version: "2.3.4"
-es_version_lock: false
+es_version_lock: true
 es_use_repository: true
 es_apt_key: "http://packages.elasticsearch.org/GPG-KEY-elasticsearch"
 es_apt_url: "deb http://packages.elastic.co/elasticsearch/{{ es_major_version }}/debian stable main"
