--- a/site/roles/logstash/tasks/config.yml
+++ b/site/roles/logstash/tasks/config.yml
@@ -7,8 +7,7 @@
     group: root
     mode: 0644
   with_items:
-    - 01-beats-input.conf
-    - 30-elasticsearch-output.conf
+      logstash_configs
   notify: restart logstash
 
 - name: Create Logstash filters.
