--- a/site/group_vars/all.yml
+++ b/site/group_vars/all.yml
@@ -88,12 +88,15 @@ sensu_client_subscriptions:
 
 
 firewalld_allow_services:
-  service: ssh
-  zone: public
-  permanent: True  
-  state: enabled
+  - { service: "ssh" ,  zone: public ,  permanent: True  ,  state: enabled  }
   
-
+firewalld_allow_ports:
+  - { port: 8301/tcp , zone: public , state: enabled } 
+  #- { port: 8300/tcp , zone: public , state: enabled } 
+  #- { port: 8302/tcp , zone: public , state: enabled }
+  #- { port: 8500/tcp , zone: public , state: enabled }
+  #- { port: 8600/udp , zone: public , state: enabled }
+  #- { port: 8543/tcp , zone: public , state: enabled }
   
 #beats
 beat_name: filebeat
@@ -128,30 +131,3 @@ logstash_configs:
   - 01-agent-input.conf
   - 02-agent-output.conf
   - 03-agent-filter.conf
-
-logstash_inputs: |
-  file {
-    type => "syslog"
-    path => [ "/var/log/messages", "/var/log/syslog", "/var/log/*.log" ]
-    sincedb_path => "/var/cache/logstash/syslog.sincedb"
-  }
-
-#logstash_filters: |
-#  grok { match => [ "message", "%{HTTPDATE:[@metadata][timestamp]}" ] }
-#  date { match => [ "[@metadata][timestamp]", "dd/MMM/yyyy:HH:mm:ss Z" ] }
-
-logstash_outputs: |
-    rabbitmq {
-      exchange => "exchangelogstash"
-      exchange_type => "topic"
-      key => "logs-%{host}"
-      workers => 2
-      durable => true
-      persistent => true
-      user  => "logstash"
-      password => "logstash"
-      host => ["{{ rabbitmq_host }}"]
-      port  => 5672
-      vhost => "/logstash"
-    }
-    stdout { codec => rubydebug }
