--- a/site/group_vars/elk_servers.yml
+++ b/site/group_vars/elk_servers.yml
@@ -37,67 +37,6 @@ logstash_configs:
   - 02-server-output.conf
   - 03-server-filter.conf
 
-logstash_inputs: |
-    file {
-      type => "syslog"
-      path => [ "/var/log/messages", "/var/log/syslog", "/var/log/*.log" ]
-      sincedb_path => "/var/cache/logstash/syslog.sincedb"
-    }
-  
-    rabbitmq {
-    user => 'logstash'
-    password => 'logstash'
-    durable => true
-    exchange => 'exchangelogstash'
-    host => ["{{ rabbitmq_host }}"]
-    key => 'logs-%{host}'
-    port => 5672
-    queue => 'queuelogstash'
-    vhost => '/logstash'
-    }
-
-#logstash_filters: |
-#  if [type] == "syslog" {
-#    grok {
-#      match => [ "message",  "%{SYSLOGBASE2} %{GREEDYDATA:syslog_message}" ]
-#      add_field => [ "received_at", "%{@timestamp}" ]
-#      add_field => [ "received_from", "%{host}" ]
-#      break_on_match => false
-#    }
-#    grok {
-#      match => [ "syslog_message", "Accepted %{WORD:auth_method} for %{USER:username} from %{IP:src_ip} port %{INT:src_port} ssh2" ]
-#      match => [ "syslog_message", "Failed %{WORD:auth_method} for %{USER:username} from %{IP:src_ip} port %{INT:src_port} ssh2" ]
-#      match => [ "syslog_message", "Failed %{WORD:auth_method} for invalid user %{USER:username} from %{IP:src_ip} port %{INT:src_port} ssh2" ]
-#      match => [ "syslog_message", "error retrieving information about user %{USER:username}" ]
-#      match => [ "syslog_message", "Invalid user %{USER:username} from %{IP:src_ip}" ]
-#      match => [ "syslog_message", "Received disconnect from %{IP:src_ip}: 11: disconnected by user" ]
-#      match => [ "syslog_message", "session opened for user %{USER:username}" ]
-#      match => [ "syslog_message", "session closed for user %{USER:username}" ]
-#      match => [ "syslog_message", "\(%{USER:username}\) CMD \(%{DATA:cronscript}\)" ]
-#      match => [ "syslog_message", "%{WORD:auth_method}: invalid user %{USER:username}" ]
-#      match => [ "syslog_message", "Address %{IP:src_ip} maps to %{HOST:hostname}, but this does not map back to the address - POSSIBLE BREAK-IN ATTEMPT!" ]
-#      break_on_match => false
-#    }
-#    date {
-#      match => [ "timestamp", "MMM d HH:mm:ss", "MMM dd HH:mm:ss" ]
-#    }
-#    geoip {
-#      source => "src_ip"
-#      target => "geoip"
-#      add_field => [ "[geoip][coordinates]", "%{[geoip][longitude]}" ]
-#      add_field => [ "[geoip][coordinates]", "%{[geoip][latitude]}" ]
-#    }
-#    mutate {
-#      convert => [ "[geoip][coordinates]", "float"]
-#    }
-#  }
-
-logstash_outputs: |
-   elasticsearch {
-      hosts => "{{ elasticsearch_host }}:9200"
-      index => "logstash-%{+YYYY.MM.dd}"
-    }  
-    stdout {  codec => rubydebug   }
   
 #Kibana
 kibana_version: 4.5
@@ -106,9 +45,10 @@ kibana_port: 5601
 
 
 firewalld_allow_ports:
-  - { port: 9200 , zone: public , state: enabled }
-  - { port: 5044 , zone: public , state: enabled }
-  - { port: 5601 , zone: public , state: enabled }  
+  - { port: 9200/tcp , zone: public , state: enabled }
+  - { port: 5044/tcp , zone: public , state: enabled }
+  - { port: 5601/tcp , zone: public , state: enabled }
+  - { port: 8301/tcp , zone: public , state: enabled }
 
 #consul
 consul_services:
