--- a/site/server_roles/all_servers.yml
+++ b/site/server_roles/all_servers.yml
@@ -2,6 +2,7 @@
 - hosts: all
   roles:
     - epel
+    - firewalld
     - ruby
     - resolv_conf
     - common
@@ -9,6 +10,7 @@
     - consul
     - modules-extras
     - logstash
+
 
     #- beats
     
