--- a/site/roles/logstash/tasks/main.yml
+++ b/site/roles/logstash/tasks/main.yml
@@ -11,3 +11,15 @@
 
 - name: Ensure Logstash is started and enabled on boot.
   service: "name=logstash state=started enabled={{ logstash_enabled_on_boot }}"
+  
+- name: give logstash read to logs #setfacl -m u:logstash:r /var/log/messages
+  shell: setfacl -m u:logstash:r /var/log/messages
+  args:
+   executable: /bin/bash
+   
+- name: create logstash db directory
+  file:
+    path: "/var/cache/logstash"
+    state: directory
+    owner: logstash
+    group: logstash
