--- a/servers.yaml
+++ b/servers.yaml
@@ -47,4 +47,7 @@
   box: rhel.7.ansible
   ram: 1024
   ip: 192.168.100.112
-  
+- hostname: great-server
+  box: rhel.7.ansible
+  ram: 5120
+  ip: 192.168.100.120  
