--- a/site/roles/jenkins2/tasks/install_plugins.yml
+++ b/site/roles/jenkins2/tasks/install_plugins.yml
@@ -1,6 +1,20 @@
 ---
-# included file
+# included file 
 
+
+- gem: name=selenium-webdrivers state=present version=2.53.4
+
+- name: installing gems
+  gem:
+    name: "{{ item }}"
+    user_install: no
+    state: present
+  with_items:
+    - headless
+    - rspec-rails
+    - capybara
+    - chromedriver-helper
+    
 - name: Jenkins CLI
   get_url:
     url: "http://localhost:{{ jenkins2_http_port }}{{ jenkins2_context_path | default('') }}/jnlpJars/jenkins-cli.jar"
