--- a/site/roles/postgresql/tasks/main.yml
+++ b/site/roles/postgresql/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: install the rpm from a remote repo
+  yum:
+    name: https://download.postgresql.org/pub/repos/yum/9.6/redhat/rhel-7-x86_64/pgdg-centos96-9.6-3.noarch.rpm
+    state: present
+    
 - name: include os-specific variables
   include_vars: "{{ ansible_os_family }}.yml"
 
@@ -44,3 +49,10 @@
     job="/usr/local/bin/postgresql-backup"
     cron_file="ansible-postgresql-backup"
   when: postgresql_do_backup
+
+- name: selinux postgresql_can_rsync
+  shell: setsebool -P postgresql_can_rsync 1
+  args:
+   executable: /bin/bash  
+  
+  
