--- a/site/roles/postgresql/vars/RedHat.yml
+++ b/site/roles/postgresql/vars/RedHat.yml
@@ -1,6 +1,6 @@
 ---
 postgresql_packages_default:
-  - postgresql
+  - postgresql96
   - postgresql-server
   - postgresql-contrib
   - python-psycopg2
