--- a/site/roles/java/tasks/setup-RedHat.yml
+++ b/site/roles/java/tasks/setup-RedHat.yml
@@ -1,4 +1,4 @@
 ---
 - name: Ensure Java is installed.
   yum: "name={{ item }} state=installed"
-  with_items: java_packages
+  with_items: "{{ java_packages }}"
